<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/date"
        android:layout_weight="2"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/lblDocumentNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/transaction_number"
        android:layout_marginLeft="5dp"
        android:layout_weight="2"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/lblProcess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/description"
        android:layout_marginLeft="5dp"
        android:layout_weight="3"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/lblDept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/dept"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/lblWill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/credit"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"/>
</LinearLayout>