<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aresrd.android.beatrp.FragmentInvoices">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/lblTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invoice_type"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#4a5a71"></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/cmbInvoiceTypes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/invoice_types"
                android:prompt="@string/invoice_type_prompt"
                android:layout_weight="2"/>
            <Spinner
                android:id="@+id/cmbAccountTypesWithAll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/account_types_with_all"
                android:prompt="@string/account_type_prompt"
                android:layout_weight="2"/>
            <Spinner
                android:id="@+id/cmbAccountsInvoice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_range"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnBeginDateInvoice"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnEndDateInvoice"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invoice_number"/>
                <EditText
                    android:id="@+id/txtInvoiceNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHint="#d9e5f3"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:letterSpacing="0.1"
                    android:textSize="16dp"
                    android:inputType="text"
                    android:textColor="#fff"
                    android:ems="10"/>
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnInvoiceSearch"
                android:layout_alignParentRight="true"
                android:text="@string/search" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#4a5a71"></LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lvInvoices"
            android:layout_marginTop="30dp"/>
    </LinearLayout>
</FrameLayout>
