<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mainBg"
    android:padding="10dp">

        <RelativeLayout
            android:id="@+id/logo_layout"
            style="@style/logo_style">

                <ImageView
                    android:src="@drawable/ares_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
        </RelativeLayout>
        <!-- ares logo finished -->


        <!-- input layout started-->
        <RelativeLayout
            style="@style/parentAllInputLayoutsRelativeLayout"
            android:background="@drawable/layout_bg"
            android:id="@+id/inputLayouts"
            android:layout_below="@+id/logo_layout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

                <RelativeLayout
                    android:id="@+id/input_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true">

                        <LinearLayout
                            style="@style/InputLinearLayout"
                            android:id="@+id/mail_input_layout">

                                <LinearLayout
                                    android:background="@color/colorButton"
                                    android:layout_width="45dp"
                                    android:layout_height="match_parent"
                                    android:padding="11dp">

                                        <ImageView
                                            android:id="@+id/imageView"
                                            style="@style/symbolToInputs"
                                            android:src="@drawable/mail" />
                                </LinearLayout>

                                <EditText
                                    android:id="@+id/txtEmail"
                                    style="@style/editTextInput"
                                    android:background="@color/editTextBg"
                                    android:hint="Email"
                                    android:textColorHint="@color/hintColor" />
                        </LinearLayout>

                        <Space
                            android:id="@+id/space"
                            android:layout_below="@+id/mail_input_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="15dp" />
                        <!-- mail input layout finish -->

                        <!-- password input layout starts -->
                        <LinearLayout
                            style="@style/InputLinearLayout"
                            android:id="@+id/password_input_layout"
                            android:layout_below="@+id/space">

                                <LinearLayout
                                    android:layout_width="45dp"
                                    android:layout_height="match_parent"
                                    android:background="@color/colorButton"
                                    android:padding="11dp">

                                        <ImageView
                                            android:id="@+id/imageView6"
                                            style="@style/symbolToInputs"
                                            android:src="@drawable/password" />
                                </LinearLayout>

                                <EditText
                                    android:id="@+id/txtPassword"
                                    style="@style/editTextInput"
                                    android:background="@color/editTextBg"
                                    android:hint="@string/password"
                                    android:inputType="textPassword"
                                    android:textColorHint="@color/hintColor" />
                        </LinearLayout>


                </RelativeLayout>


                <!--  submit / login button -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_layout"
                    android:layout_alignLeft="@+id/input_layout"
                    android:layout_alignStart="@+id/input_layout"
                    android:layout_marginTop="13dp"
                    android:gravity="center_horizontal"
                    android:layout_alignRight="@+id/input_layout"
                    android:layout_alignEnd="@+id/input_layout">


                        <Button
                            style="@style/buttonStyle"
                            android:background="@drawable/button_bg_color_on_active"
                            android:text="@string/log_in"
                            android:id="@+id/btnLogin"
                            android:onClick="SignIn"
                            android:textColor="@drawable/button_text_color_on_active" />
                </RelativeLayout>



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:id="@+id/relativeLayout2"
            android:layout_below="@+id/inputLayouts"
            android:layout_marginTop="10dp"
            android:layout_alignRight="@+id/inputLayouts"
            android:layout_alignEnd="@+id/inputLayouts"
            android:layout_alignLeft="@+id/inputLayouts"
            android:layout_alignStart="@+id/inputLayouts">


                <TextView
                    android:id="@+id/textView"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_you_have_an_account_yet"
                    android:layout_alignBottom="@+id/signup_inLogin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/loginSignUpEtc"
                    android:text="@string/sign_up"
                    android:id="@+id/signup_inLogin"
                    android:clickable="true"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/textView"
                    android:layout_toEndOf="@+id/textView"
                    android:layout_marginTop="14dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="13dp"
            android:layout_below="@+id/relativeLayout2"
            android:layout_alignLeft="@+id/relativeLayout2"
            android:layout_alignStart="@+id/relativeLayout2"
            android:layout_alignRight="@+id/relativeLayout2"
            android:layout_alignEnd="@+id/relativeLayout2">

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/forgot_password_inLogin"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textColor="@color/loginSignUpEtc"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:text="@string/forgot_password"/>
        </RelativeLayout>


</RelativeLayout>
